    - tweak padding between buttons in addons bar (LP: #625230)
    - don't reload screenshot (ie flicker) if we refresh an existing page
    - fix typo (LP: #622750)
    - fix some broken logic which gives wrong total size (LP: #624578)
    - show "x when installed" when addons are selected for installed pkg
    - fix a quirk so that the download size is not always 0
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - add translators comment to clarify underscore behaviour (LP: #626718)
  * softwarecenter/view/historypane.py:
    - tweak string for consistency (LP: #627215)
    - hide the architecture (introduced by new apt a little while back)
  * softwarecenter/view/purchasedialog.py:
    - don't show as 'untitled window' in taskbar

 -- Gary Lasker <gary.lasker@canonical.com>  Wed, 01 Sep 2010 17:19:42 -0400

software-center (2.1.14.2) maverick; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/small-things that cleans
    up no longer needed code in the carousel after mpts made 
    the background white
  * merged lp:~ilidrissi.amine/software-center/addons-provides and
    added test
  * merged lp:~kelemeng/software-center/bug625859, this fixes 
    UTF-8 character escapes (LP: #625859), many thanks!
  
  [ Lucian Adrian Grijincu ]
  * Alt-Left, Alt-Right work as Back/Forward like in all other GNOME apps
    (LP: #625745)

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash on encountering broken packages while getting deps
  
  [ Mohamed Amine IL Idrissi ]
  * softwarecenter/apt/aptcache.py: Packages that enhance a package that
    is provided by the main app are now add-ons (LP: #625252)

  [ Gary Lasker ]
  * softwarecenter/enums.py:
    - add missing CUSTOM_KEY_THUMBNAIL_URL value for software-center
      plugin to fix update-apt-xapian-index crash (LP: #626600)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 30 Aug 2010 12:45:06 +0200
